--- a/01 - JavaScript Drum Kit/index-START.html
+++ b/01 - JavaScript Drum Kit/index-START.html
@@ -58,13 +58,26 @@
   <audio data-key="76" src="sounds/tink.wav"></audio>
 
 <script>
-window.addEventListener('keydown', function (e) {
+
+function playSound(e) {
   const audio = document.querySelector(`audio[data-key="${e.keyCode}"]`)
-  console.log(audio);
+  const key = document.querySelector(`.key[data-key="${e.keyCode}"]`)
   if(!audio) return; // stop the function from running all together
   audio.currentTime = 0; //rewind to the start
   audio.play();
-});
+  key.classList.add('playing');
+}
+
+function removeTransition(e) {
+  if (e.propertyName != 'transform') return; // skip if it's not a transform
+  this.classList.remove('playing'); //this refers to what it's called against, here the key
+}
+
+const keys = document.querySelectorAll('.key');
+keys.forEach(key => key.addEventListener('transitionend', removeTransition)); // when you have an array, you can't attach an event listener to all of them. You need to loop through each of them
+
+window.addEventListener('keydown', playSound);
+
 </script>
 
 
