--- a/08 - Fun with HTML5 Canvas/index-START.html
+++ b/08 - Fun with HTML5 Canvas/index-START.html
@@ -20,7 +20,18 @@
   ctx.lineCap = 'round';
 
   let isDrawing = false;
-  
+  let lastX = 0;
+  let lastY = 0;
+
+  function draw(e) {
+    if(!isDrawing) return; //stop the function from running when the mouse isn't down
+  }
+
+  canvas.addEventListener('mousemove', draw);
+  canvas.addEventListener('mousedown', () => isDrawing = true);
+  canvas.addEventListener('mousedown', () => isDrawing = false);
+  canvas.addEventListener('mouseout', () => isDrawing = false);
+
 </script>
 
 <style>
