--- a/08 - Fun with HTML5 Canvas/index-START.html
+++ b/08 - Fun with HTML5 Canvas/index-START.html
@@ -18,6 +18,7 @@
   ctx.strokeStyle = '#BADASS';
   ctx.lineJoin = 'round';
   ctx.lineCap = 'round';
+  ctx.lineWidth = 100;
 
   let isDrawing = false;
   let lastX = 0;
@@ -25,10 +26,21 @@
 
   function draw(e) {
     if(!isDrawing) return; //stop the function from running when the mouse isn't down
+    ctx.beginPath();
+    //start from
+    ctx.moveTo(lastX, lastY);
+    //go to
+    ctx.lineTo(e.offsetX, e.offsetY);
+    ctx.stroke();
+   [lastX, lastY = e.offsetX, e.offsetY]; // destructuring the array
   }
 
+  canvas.addEventListener('mousedown', () => {
+    isDrawing = true;
+   [lastX, lastY = e.offsetX, e.offsetY]; // destructuring the array
+  });
+
   canvas.addEventListener('mousemove', draw);
-  canvas.addEventListener('mousedown', () => isDrawing = true);
   canvas.addEventListener('mousedown', () => isDrawing = false);
   canvas.addEventListener('mouseout', () => isDrawing = false);
 
