--- a/09 - Dev Tools Domination/index-START.html
+++ b/09 - Dev Tools Domination/index-START.html
@@ -18,28 +18,33 @@
     }
 
     // Regular
-
+    console.log('hello!');  
     // Interpolated
-
+    console.log('hello I am a %s string!', 'cat');
+    console.log(`hello, I'm a ${dogs[1].name}`);
     // Styled
-
+    console.log('%c I an some great text', 'font-size: 36px');
     // warning!
-
+    console.warn('OH NOOO!');
     // Error :|
-
+    console.error('Shit!');
     // Info
-
+    console.info('Crocodiles eat 3-4 people per year!');
     // Testing
-
+    console.assert(1 === 1, 'That is wrong!');
     // clearing
-
+    console.clear();
     // Viewing DOM Elements
-
+    console.dir(p);
     // Grouping together
-
+    console.group(`${dog.name}`);
+    console.groupCollapsed(`${dog.name}`);
     // counting
-
+    console.count('Wes');
     // timing
+    console.time('fetching data');
+    //fetch smtg
+    console.timeEnd('fetching data');
 
   </script>
 </body>
